--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
 
     <footer>
         <div class="container footer-container">
-            <p>&copy; 2025 Daily Meal Planner. All Rights Reserved. Made for UC Berkeley students.</p>
+            <p>&copy; 2025 Daily Meal Planner. All Rights Reserved.</p>
         </div>
     </footer>
 
